# DataGenerationFramework

./: .gitignore  AGENTS.md  D1 主体心智层.md  README.md  pyproject.toml  题目编写流程.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: USER_GUIDE.md  USER_GUIDE_YAML.md  YAML_GUIDE.md
examples/emotion_contrasting/: scene_template.yaml  task_definition.yaml  task_specification.yaml
prompts/: 1.1.1_belief_attribution.md  example.txt
prompts/1.1.1.belief_attribution_inference/: fragment_judge.txt  fragment_mcq.txt  fragment_mcq_multi.txt  fragment_open_qa.txt
prompts/1.1.2.knowledge_state_distinction/: fragment_judge.txt  fragment_mcq.txt  fragment_mcq_multi.txt  fragment_open_qa.txt
prompts/1.1.3.belief_inconsistency_detection/: fragment_judge.txt  fragment_mcq.txt  fragment_mcq_multi.txt  fragment_open_qa.txt
prompts/1.1.4.cognitive_bias_identification/: fragment_judge.txt  fragment_mcq.txt  fragment_mcq_multi.txt  fragment_open_qa.txt
prompts/1.2.1.basic_emotion_recognition/: fragment_judge.txt  fragment_mcq.txt  fragment_mcq_multi.txt  fragment_open_qa.txt
prompts/1.2.2.compound_emotion_analysis/: fragment_judge.txt  fragment_mcq.txt  fragment_mcq_multi.txt  fragment_open_qa.txt
prompts/1.2.3.implicit_emotion_inference/: fragment_judge.txt  fragment_mcq.txt  fragment_mcq_multi.txt  fragment_open_qa.txt
scripts/: batch_export_review.py  batch_generate.py  export_review.py  generate_prompts.py  jsonl_to_json.py
tests/: conftest.py
(+177 files in other folders)
